--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -21,7 +21,7 @@
     </ion-tab-button>
 
     <ion-tab-button tab="gestor" href="/tabs/gestor">
-      <ion-icon aria-hidden="true" name="settings"></ion-icon>
+      <ion-icon name="person-circle-outline"></ion-icon>
       <ion-label>Gestor</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
