--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,97 +1,125 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Bater Ponto
+    <ion-title class="header-title">
+      MEIRELES E FREITAS<br>
+      <span class="header-subtitle">SERVIÇOS E COBRANÇAS</span>
     </ion-title>
+    <ion-buttons slot="end">
+      <ion-button fill="clear">
+        <ion-icon name="notifications-outline"></ion-icon>
+      </ion-button>
+      <ion-button fill="clear">
+        <ion-icon name="log-out-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Home</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
   <div class="container">
     <!-- Seção do Usuário -->
-    <ion-card>
+    <ion-card class="user-card">
       <ion-card-content>
         <div class="user-info">
-          <ion-avatar class="user-avatar">
-            <img [src]="usuario.foto" alt="Foto do usuário">
-          </ion-avatar>
+          <div class="user-avatar-container">
+            <!-- Avatar com foto do usuário OU iniciais -->
+            <ion-avatar class="user-avatar">
+              <img *ngIf="usuario.foto && usuario.foto !== 'assets/images/user-placeholder.png'; else semFoto" [src]="usuario.foto" alt="Foto do usuário" />
+              <ng-template #semFoto>
+                <div class="avatar-placeholder">{{ getInitials(usuario.nome) }}</div>
+              </ng-template>
+            </ion-avatar>
+            <ion-button size="small" fill="solid" color="danger" class="change-photo-btn" (click)="selecionarFoto()">
+              Alterar Foto
+            </ion-button>
+            <input type="file" accept="image/*" #inputFoto hidden (change)="onFileSelected($event)" />
+          </div>
           <div class="user-details">
-            <h2>Olá, {{ usuario.nome }}!</h2>
-            <p>Matrícula: {{ usuario.matricula }}</p>
-            <p>Cargo: {{ usuario.cargo }}</p>
+            <h2>Olá,</h2>
+            <div class="user-name">{{ usuario.nome }}</div>
+            <div class="user-role">{{ usuario.cargo }}</div>
           </div>
         </div>
       </ion-card-content>
     </ion-card>
 
     <!-- Saldo Banco de Horas -->
-    <ion-card>
-      <ion-card-header>
-        <ion-card-title>Banco de Horas</ion-card-title>
-      </ion-card-header>
+    <ion-card class="bank-hours-card">
       <ion-card-content>
-        <div class="banco-horas">
-          <div class="saldo-item credito">
-            <ion-icon name="add-circle" color="success"></ion-icon>
-            <span>Crédito: {{ saldoBancoHoras.credito }}h</span>
-          </div>
-          <div class="saldo-item debito">
-            <ion-icon name="remove-circle" color="danger"></ion-icon>
-            <span>Débito: {{ saldoBancoHoras.debito }}h</span>
-          </div>
-          <div class="saldo-item saldo">
-            <ion-icon name="time" color="primary"></ion-icon>
-            <span>Saldo: {{ saldoBancoHoras.saldo }}h</span>
-          </div>
+        <h3>Saldo do Banco de Horas</h3>
+        <div class="registration-number">Matrícula: {{ usuario.matricula }}</div>
+        
+        <div class="hours-circle">
+          <div class="debt-label">DÉBITO</div>
+          <div class="hours-value">{{ saldoBancoHoras.debito }}h</div>
+          <div class="minutes-value">{{ saldoBancoHoras.minutos }}min</div>
         </div>
+        
+        <div class="bank-validity">Banco de horas até 31/05/2025</div>
       </ion-card-content>
     </ion-card>
 
     <!-- Menu de Navegação -->
-    <ion-card>
-      <ion-card-header>
-        <ion-card-title>Menu</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <div class="menu-buttons">
-          <ion-button expand="block" fill="outline" (click)="navegarPara('/batidas-do-mes')">
-            <ion-icon name="calendar" slot="start"></ion-icon>
-            Batidas do Mês
-          </ion-button>
-          
-          <ion-button expand="block" fill="outline" (click)="navegarPara('/registrar-ponto')">
-            <ion-icon name="time" slot="start"></ion-icon>
-            Registrar Ponto
-          </ion-button>
-          
-          <ion-button expand="block" fill="outline" (click)="navegarPara('/folha-do-mes')">
-            <ion-icon name="document-text" slot="start"></ion-icon>
-            Folha do Mês
-          </ion-button>
-          
-          <ion-button expand="block" fill="outline" (click)="navegarPara('/qr-batida')">
-            <ion-icon name="qr-code" slot="start"></ion-icon>
-            QR Batida
-          </ion-button>
-          
-          <ion-button expand="block" fill="outline" (click)="navegarPara('/dados-pessoais')">
-            <ion-icon name="person" slot="start"></ion-icon>
-            Dados Pessoais
-          </ion-button>
-          
-          <ion-button expand="block" fill="outline" (click)="navegarPara('/termos-condicoes')">
-            <ion-icon name="document" slot="start"></ion-icon>
-            Termos e Condições
-          </ion-button>
+    <div class="menu-grid">
+      <ion-button 
+        fill="clear" 
+        class="menu-item" 
+        (click)="navegarPara('/batidas-do-mes')">
+        <div class="menu-content">
+          <ion-icon name="calendar" class="menu-icon"></ion-icon>
+          <div class="menu-text">Batidas<br>do mês</div>
         </div>
-      </ion-card-content>
-    </ion-card>
+      </ion-button>
+
+      <ion-button 
+        fill="clear" 
+        class="menu-item" 
+        (click)="navegarPara('/registrar-ponto')">
+        <div class="menu-content">
+          <ion-icon name="time" class="menu-icon"></ion-icon>
+          <div class="menu-text">Registrar<br>ponto</div>
+        </div>
+      </ion-button>
+
+      <ion-button 
+        fill="clear" 
+        class="menu-item" 
+        (click)="navegarPara('/folha-do-mes')">
+        <div class="menu-content">
+          <ion-icon name="calculator" class="menu-icon"></ion-icon>
+          <div class="menu-text">Folha<br>do mês</div>
+        </div>
+      </ion-button>
+
+      <ion-button 
+        fill="clear" 
+        class="menu-item" 
+        (click)="navegarPara('/qr-batida')">
+        <div class="menu-content">
+          <ion-icon name="qr-code" class="menu-icon"></ion-icon>
+          <div class="menu-text">QR batida<br>Totem</div>
+        </div>
+      </ion-button>
+
+      <ion-button 
+        fill="clear" 
+        class="menu-item" 
+        (click)="navegarPara('/dados-pessoais')">
+        <div class="menu-content">
+          <ion-icon name="person" class="menu-icon"></ion-icon>
+          <div class="menu-text">Dados<br>pessoais</div>
+        </div>
+      </ion-button>
+
+      <ion-button 
+        fill="clear" 
+        class="menu-item" 
+        (click)="navegarPara('/termos-condicoes')">
+        <div class="menu-content">
+          <ion-icon name="document-text" class="menu-icon"></ion-icon>
+          <div class="menu-text">Termos e<br>condições</div>
+        </div>
+      </ion-button>
+    </div>
   </div>
 </ion-content>
-
