--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,15 +5,16 @@
       <span class="header-subtitle">SERVIÇOS E COBRANÇAS</span>
     </ion-title>
     <ion-buttons slot="end">
-      <ion-button fill="clear">
+      <ion-button fill="clear" (click)="abrirNotificacoes()">
         <ion-icon name="notifications-outline"></ion-icon>
       </ion-button>
-      <ion-button fill="clear">
+      <ion-button fill="clear"(click)="confirmarLogout()">
         <ion-icon name="log-out-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
+
 
 <ion-content [fullscreen]="true">
   <div class="container">
